klimt OS3.0.10.0.WOSMIXM

--- a/mtk-sdk36/Arabic/main/MiuiSystemUI.apk/res/values-ar/strings.xml
+++ b/mtk-sdk36/Arabic/main/MiuiSystemUI.apk/res/values-ar/strings.xml
@@ -1420,6 +1420,7 @@ d/M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">إظهار الإشعارات المخصصة من \"%1$s\" في ظل الإشعارات؟</string>
     <string name="miui_notification_menu_msg_not_allow">إيقاف تشغيل جميع الإشعارات من %1$s؟</string>
     <string name="miui_notification_menu_msg_unfocus">أنت على وشك إيقاف تمييز إشعارات %1$s. سيتم عرض هذه الإشعارات بعد ذلك بشكل عادي. متابعة؟</string>
+    <string name="miui_notification_menu_msg_unliveupdate">سيؤدي هذا إلى إيقاف جميع التحديثات المباشرة من %1$s. ستظهر الإشعارات الجديدة بالتنسيق المعتاد. هل تريد إيقاف التحديثات المباشرة الآن؟</string>
     <string name="miui_notification_menu_setting_success">تم</string>
     <string name="miui_notification_menu_snooze">غفوة</string>
     <string name="miui_notification_menu_title_custom_fold">إشعارات المجموعة المخصصة</string>
@@ -1427,6 +1428,7 @@ d/M"</string>
     <string name="miui_notification_menu_title_no_drawable">متابعة على الشاشة الداخلية</string>
     <string name="miui_notification_menu_title_not_allow">إيقاف التشغيل</string>
     <string name="miui_notification_menu_unfocus">إيقاف تمييز الإشعارات</string>
+    <string name="miui_notification_menu_unliveupdate">إيقاف التحديثات المباشرة</string>
     <string name="miui_oversize_a_date">"d
 /
 M"</string>
