--- a/mtk-sdk36/Azerbaijani/main/MiuiSystemUI.apk/res/values-az-rAZ/strings.xml
+++ b/mtk-sdk36/Azerbaijani/main/MiuiSystemUI.apk/res/values-az-rAZ/strings.xml
@@ -376,6 +376,7 @@ d/M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Bildiriş panelində \"%1$s\"-dən fərdi bildirişlər göstərilsin?</string>
     <string name="miui_notification_menu_msg_not_allow">%1$s tərəfindən göndərilən bütün bildirişlər söndürülsün?</string>
     <string name="miui_notification_menu_msg_unfocus">Siz %1$s üçün Bildiriş işığını söndürmək üzrəsiniz. Bu bildirişlər normal şəkildə göstəriləcək. İndi söndürülsün?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Bu, %1$s-dən bütün canlı yeniləmələri dayandıracaq. Yeni bildirişlər adi formatda göstəriləcək. Canlı yeniləmələr indi dayandırılsın?</string>
     <string name="miui_notification_menu_setting_success">Hazırdır</string>
     <string name="miui_notification_menu_snooze">Mürgülə</string>
     <string name="miui_notification_menu_title_custom_fold">Fərdi bildirişləri qruplaşdırın</string>
@@ -383,6 +384,7 @@ d/M"</string>
     <string name="miui_notification_menu_title_no_drawable">Daxili ekranda davam edin</string>
     <string name="miui_notification_menu_title_not_allow">Söndür</string>
     <string name="miui_notification_menu_unfocus">Bildiriş işığını söndürün</string>
+    <string name="miui_notification_menu_unliveupdate">Canlı yeniləmələri dayandır</string>
     <string name="miui_oversize_a_date">"dd
 .
 MM"</string>
