--- a/mtk-sdk36/Belarusian/main/MiuiSystemUI.apk/res/values-be/strings.xml
+++ b/mtk-sdk36/Belarusian/main/MiuiSystemUI.apk/res/values-be/strings.xml
@@ -1419,6 +1419,7 @@ d.M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Паказваць персаналізаваныя апавяшчэнні ад «%1$s» у Панэлі апавяшчэнняў?</string>
     <string name="miui_notification_menu_msg_not_allow">Выключыць усе апавяшчэнні ад %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Вы збіраецеся адключыць індыкатар апавяшчэнняў для %1$s. Гэтыя апавяшчэння будуць адлюстроўвацца нармальна. Выключыць зараз?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Гэта спыніць усе абнаўленні ў реальным часе ад %1$s. Новыя апавяшчэнні будуць адлюстроўвацца ў звычайным фармаце. Спыніць абнаўленні ў рэальным часу зараз?</string>
     <string name="miui_notification_menu_setting_success">Гатова</string>
     <string name="miui_notification_menu_snooze">Адкласці</string>
     <string name="miui_notification_menu_title_custom_fold">Групаваць персаналізаваныя апавяшчэнні</string>
@@ -1426,6 +1427,7 @@ d.M"</string>
     <string name="miui_notification_menu_title_no_drawable">Працягнуць на ўнутраным экране</string>
     <string name="miui_notification_menu_title_not_allow">Выключыць</string>
     <string name="miui_notification_menu_unfocus">Выключыць індыкатар апавяшчэнняў</string>
+    <string name="miui_notification_menu_unliveupdate">Спыніць абнаўленні ў рэальнага часе</string>
     <string name="miui_oversize_a_date">"d
 /
 M"</string>
