--- a/mtk-sdk36/Bulgarian/main/MiuiSystemUI.apk/res/values-bg/strings.xml
+++ b/mtk-sdk36/Bulgarian/main/MiuiSystemUI.apk/res/values-bg/strings.xml
@@ -1419,6 +1419,7 @@ d.M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Показване на персонализираните известия от \"%1$s\" в Лентата с известия?</string>
     <string name="miui_notification_menu_msg_not_allow">Изключване на всички известия от %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">На път сте да изключите Акцентирани известия за %1$s. Тези известия ще се показват нормално. Изключване сега?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Това ще спре всички актуализации на живо от %1$s. Новите известия ще се показват в обикновен формат. Спиране на актуализациите на живо сега?</string>
     <string name="miui_notification_menu_setting_success">Готово</string>
     <string name="miui_notification_menu_snooze">Отлагане</string>
     <string name="miui_notification_menu_title_custom_fold">Групиране на персонализирани известия</string>
@@ -1426,6 +1427,7 @@ d.M"</string>
     <string name="miui_notification_menu_title_no_drawable">Продължете на вътрешния екран</string>
     <string name="miui_notification_menu_title_not_allow">Изключване</string>
     <string name="miui_notification_menu_unfocus">Изключване на Акцентирани известия</string>
+    <string name="miui_notification_menu_unliveupdate">Спри актуализациите на живо</string>
     <string name="miui_oversize_a_date">"dd
 .
 MM"</string>
