--- a/mtk-sdk36/Burmese/main/MiuiSystemUI.apk/res/values-my-rMM/strings.xml
+++ b/mtk-sdk36/Burmese/main/MiuiSystemUI.apk/res/values-my-rMM/strings.xml
@@ -376,6 +376,7 @@ d/M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">\"%1$s\" မှ စိတ်ကြိုက်အသိပေးချက်များကို \"အသိပေးချက်ရှိတ်\" ၌ ပြလိုသလား။</string>
     <string name="miui_notification_menu_msg_not_allow">%1$s မှ အသိပေးချက်အားလုံးကို ပိတ်လိုသလား။</string>
     <string name="miui_notification_menu_msg_unfocus">%1$s အတွက် အသိပေးချက်စပေါ့လိုက်ကို ပိတ်ပါတော့မည်။ ဤအသိပေးချက်များကို ပုံမှန်သာ ပြသပါမည်။ ယခုပိတ်လိုသလား။</string>
+    <string name="miui_notification_menu_msg_unliveupdate">%1$s မှ အပ်ပဒိတ်အားလုံးကို ရပ်ါလိုက်ပါမည်။ အသိပေးချက်အသစ်များကို ပုံမှန်ဖောမတ်နှင့်သာ ပြပါမည်။ တိုက်ရိုက်အပ်ပဒိတ်များကို ယခုရပ်လိုသလား။</string>
     <string name="miui_notification_menu_setting_success">ပြီးပါပြီ</string>
     <string name="miui_notification_menu_snooze">တစ်မှေးအိပ်</string>
     <string name="miui_notification_menu_title_custom_fold">စိတ်ကြိုက်အသိပေးချက်များကို အုပ်စုဖွဲ့ရန်</string>
@@ -383,6 +384,7 @@ d/M"</string>
     <string name="miui_notification_menu_title_no_drawable">အတွင်းမျက်နှာပြင်၌ ရှေ့ဆက်ရန်</string>
     <string name="miui_notification_menu_title_not_allow">ပိတ်ရန်</string>
     <string name="miui_notification_menu_unfocus">အသိပေးချက်စပေါ့လိုက်ပိတ်ရန်</string>
+    <string name="miui_notification_menu_unliveupdate">တိုက်ရိုက်အပ်ပဒိတ်များရပ်ရန်</string>
     <string name="miui_oversize_a_date">"d
 /
 M"</string>
