--- a/mtk-sdk36/Catalan/main/MiuiSystemUI.apk/res/values-ca/strings.xml
+++ b/mtk-sdk36/Catalan/main/MiuiSystemUI.apk/res/values-ca/strings.xml
@@ -1419,6 +1419,7 @@ d/M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Voleu mostrar les notificacions personalitzades de \"%1$s\" a la Barra de notificacions?</string>
     <string name="miui_notification_menu_msg_not_allow">Voleu desactivar totes les notificacions de %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Esteu a punt de desactivar el Destacat de notificacions per a %1$s. Aquestes notificacions es mostraran normalment. Voleu desactivar-la ara?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Això aturarà totes les actualitzacions en directe de %1$s. Les noves notificacions es mostraran en el format normal. Voleu aturar les actualitzacions en directe ara?</string>
     <string name="miui_notification_menu_setting_success">Fet</string>
     <string name="miui_notification_menu_snooze">Postposar</string>
     <string name="miui_notification_menu_title_custom_fold">Agrupa les notificacions personalitzades</string>
@@ -1426,6 +1427,7 @@ d/M"</string>
     <string name="miui_notification_menu_title_no_drawable">Continueu a la pantalla interior</string>
     <string name="miui_notification_menu_title_not_allow">Desactiva</string>
     <string name="miui_notification_menu_unfocus">Desactiva el destacat de notificacions</string>
+    <string name="miui_notification_menu_unliveupdate">Atura les actualitzacions en directe</string>
     <string name="miui_oversize_a_date">"d
 /
 M"</string>
