--- a/mtk-sdk36/Croatian/main/MiuiSystemUI.apk/res/values-hr/strings.xml
+++ b/mtk-sdk36/Croatian/main/MiuiSystemUI.apk/res/values-hr/strings.xml
@@ -1419,6 +1419,7 @@ d. M."</string>
     <string name="miui_notification_menu_msg_custom_unfold">Prikazivati prilagođene obavijesti iz „%1$s“ u Panelu obavijesti?</string>
     <string name="miui_notification_menu_msg_not_allow">Isključi sve obavijesti od %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Isključit ćete Istaknutu obavijest za %1$s. Ova obavijest će biti normalno prikazana. Isključi sada?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Ovim će se zaustaviti sva ažuriranja uživo od %1$s. Nove obavijesti prikazivat će se u uobičajenom formatu. Želite li odmah zaustaviti ažuriranja uživo?</string>
     <string name="miui_notification_menu_setting_success">Dovršeno</string>
     <string name="miui_notification_menu_snooze">Odgodi</string>
     <string name="miui_notification_menu_title_custom_fold">Grupne prilagođene obavijesti</string>
@@ -1426,6 +1427,7 @@ d. M."</string>
     <string name="miui_notification_menu_title_no_drawable">Nastavite na unutarnjem zaslonu</string>
     <string name="miui_notification_menu_title_not_allow">Isključi</string>
     <string name="miui_notification_menu_unfocus">Isključi Istaknute obavijesti</string>
+    <string name="miui_notification_menu_unliveupdate">Zaustavi ažuriranja uživo</string>
     <string name="miui_oversize_a_date">"d
 .
 M"</string>
