--- a/mtk-sdk36/Czech/main/MiuiSystemUI.apk/res/values-cs/strings.xml
+++ b/mtk-sdk36/Czech/main/MiuiSystemUI.apk/res/values-cs/strings.xml
@@ -1419,6 +1419,7 @@ d.M."</string>
     <string name="miui_notification_menu_msg_custom_unfold">Zobrazovat vlastní oznámení z „%1$s“ v Oznamovací roletce?</string>
     <string name="miui_notification_menu_msg_not_allow">Vypnout všechna oznámení z %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Chystáte se vypnout zdůraznění oznámení pro %1$s. Tato oznámení se zobrazí normálně. Chcete to vypnout nyní?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Tím se zastaví příjem všech živých aktualizací z %1$s. Nová oznámení se budou zobrazovat v běžném formátu. Zastavit živé aktualizace nyní?</string>
     <string name="miui_notification_menu_setting_success">Hotovo</string>
     <string name="miui_notification_menu_snooze">Odložení budíku</string>
     <string name="miui_notification_menu_title_custom_fold">Seskupit vlastní oznámení</string>
@@ -1426,6 +1427,7 @@ d.M."</string>
     <string name="miui_notification_menu_title_no_drawable">Pokračujte na vnitřní obrazovce</string>
     <string name="miui_notification_menu_title_not_allow">Vypnout</string>
     <string name="miui_notification_menu_unfocus">Vypnout zdůraznění oznámení</string>
+    <string name="miui_notification_menu_unliveupdate">Zastavit živé aktualizace</string>
     <string name="miui_oversize_a_date">"d
 .
 M"</string>
