--- a/mtk-sdk36/Danish/main/MiuiSystemUI.apk/res/values-da/strings.xml
+++ b/mtk-sdk36/Danish/main/MiuiSystemUI.apk/res/values-da/strings.xml
@@ -1419,6 +1419,7 @@ d.M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Vis tilpassede notifikationer fra \"%1$s\" i Notifikationsskygge?</string>
     <string name="miui_notification_menu_msg_not_allow">Slå alle notifikationer fra for %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Du er ved at deaktivere notifikations-spotlight for %1$s. Disse notifikationer vil blive vist normalt. Deaktivér nu?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Det stopper alle liveopdateringer fra %1$s. Nye notifikationer vises i det normale format. Stop liveopdateringer nu?</string>
     <string name="miui_notification_menu_setting_success">Udført</string>
     <string name="miui_notification_menu_snooze">Slumre</string>
     <string name="miui_notification_menu_title_custom_fold">Gruppér tilpassede notifikationer</string>
@@ -1426,6 +1427,7 @@ d.M"</string>
     <string name="miui_notification_menu_title_no_drawable">Fortsæt på inderskærmen</string>
     <string name="miui_notification_menu_title_not_allow">Slå fra</string>
     <string name="miui_notification_menu_unfocus">Deaktivér notifikations-spotlight</string>
+    <string name="miui_notification_menu_unliveupdate">Stop liveopdateringer</string>
     <string name="miui_oversize_a_date">"dd
 .
 MM"</string>
