--- a/mtk-sdk36/Dutch/main/MiuiSystemUI.apk/res/values-nl/strings.xml
+++ b/mtk-sdk36/Dutch/main/MiuiSystemUI.apk/res/values-nl/strings.xml
@@ -1419,6 +1419,7 @@ d/M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Aangepaste meldingen van \"%1$s\" weergeven in het Meldingenpaneel?</string>
     <string name="miui_notification_menu_msg_not_allow">Alle meldingen van %1$s uitschakelen?</string>
     <string name="miui_notification_menu_msg_unfocus">U staat op het punt om Meldingsschijnwerper uit te schakelen voor %1$s. Deze meldingen worden normaal weergegeven. Nu uitschakelen?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Hiermee worden alle live-updates van %1$s stopgezet. Nieuwe meldingen worden in de normale opmaak weergegeven. Live-updates nu stoppen?</string>
     <string name="miui_notification_menu_setting_success">Voltooid</string>
     <string name="miui_notification_menu_snooze">Sluimeren</string>
     <string name="miui_notification_menu_title_custom_fold">Groepeer aangepaste meldingen</string>
@@ -1426,6 +1427,7 @@ d/M"</string>
     <string name="miui_notification_menu_title_no_drawable">Ga verder op het binnenste scherm</string>
     <string name="miui_notification_menu_title_not_allow">Uitschakelen</string>
     <string name="miui_notification_menu_unfocus">Meldingsschijnwerper uitschakelen</string>
+    <string name="miui_notification_menu_unliveupdate">Stop de live-updates</string>
     <string name="miui_oversize_a_date">"d
 /
 M"</string>
