--- a/mtk-sdk36/Finnish/main/MiuiSystemUI.apk/res/values-fi/strings.xml
+++ b/mtk-sdk36/Finnish/main/MiuiSystemUI.apk/res/values-fi/strings.xml
@@ -1419,6 +1419,7 @@ d.M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Näytetäänkö mukautetut ilmoitukset kohteesta \"%1$s\" ilmoitusalueella?</string>
     <string name="miui_notification_menu_msg_not_allow">Poistetaanko käytöstä kaikki ilmoitukset sovelluksesta %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Olet poistamassa ilmoitusten korostuksen käytöstä sovellukselta %1$s. Nämä ilmoitukset näytetään normaalisti. Otetaanko pois käytöstä?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Tämä toiminto pysäyttää kaikki reaaliaikaiset päivitykset kohteesta %1$s. Uudet ilmoitukset näytetään tavallisessa muodossa. Lopetetaanko reaaliaikaiset päivitykset nyt?</string>
     <string name="miui_notification_menu_setting_success">Valmis</string>
     <string name="miui_notification_menu_snooze">Torkuta</string>
     <string name="miui_notification_menu_title_custom_fold">Ryhmittele mukautetut ilmoitukset</string>
@@ -1426,6 +1427,7 @@ d.M"</string>
     <string name="miui_notification_menu_title_no_drawable">Jatka sisänäytöltä</string>
     <string name="miui_notification_menu_title_not_allow">Poista käytöstä</string>
     <string name="miui_notification_menu_unfocus">Ota ilmoitusten korostus pois käytöstä</string>
+    <string name="miui_notification_menu_unliveupdate">Lopeta reaaliaikaiset päivitykset</string>
     <string name="miui_oversize_a_date">"d
 .
 M"</string>
