--- a/mtk-sdk36/French/main/MiuiSystemUI.apk/res/values-fr/strings.xml
+++ b/mtk-sdk36/French/main/MiuiSystemUI.apk/res/values-fr/strings.xml
@@ -1419,6 +1419,7 @@ d/M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Afficher les notifications personnalisées de \"%1$s\" dans le Panneau de notification ?</string>
     <string name="miui_notification_menu_msg_not_allow">Désactiver toutes les notifications de %1$s ?</string>
     <string name="miui_notification_menu_msg_unfocus">Vous êtes sur le point de désactiver Notification de voyant pour %1$s. Ces notifications seront affichées normalement. Désactiver maintenant ?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">"Cela arrêtera toutes les mises à jour en direct de %1$s. Les nouvelles notifications s'afficheront au format habituel. Arrêter les mises à jour en direct maintenant ?"</string>
     <string name="miui_notification_menu_setting_success">Terminer</string>
     <string name="miui_notification_menu_snooze">Reporter</string>
     <string name="miui_notification_menu_title_custom_fold">Grouper les notifications personnalisées</string>
@@ -1426,6 +1427,7 @@ d/M"</string>
     <string name="miui_notification_menu_title_no_drawable">"Continuer sur l'écran interne"</string>
     <string name="miui_notification_menu_title_not_allow">Désactiver</string>
     <string name="miui_notification_menu_unfocus">Désactiver Notification de voyant</string>
+    <string name="miui_notification_menu_unliveupdate">Arrêter les mises à jour en direct</string>
     <string name="miui_oversize_a_date">"d
 /
 M"</string>
