--- a/mtk-sdk36/German/main/MiuiSystemUI.apk/res/values-de/strings.xml
+++ b/mtk-sdk36/German/main/MiuiSystemUI.apk/res/values-de/strings.xml
@@ -1420,6 +1420,7 @@ d.M."</string>
     <string name="miui_notification_menu_msg_custom_unfold">Benutzerdefinierte Benachrichtigungen von „%1$s“ in der Benachrichtigungsleiste anzeigen?</string>
     <string name="miui_notification_menu_msg_not_allow">Alle Benachrichtigungen von %1$s ausschalten?</string>
     <string name="miui_notification_menu_msg_unfocus">Du wirst das Spotlight für Benachrichtigungen für %1$s ausschalten. Diese Benachrichtigungen werden normal angezeigt. Jetzt ausschalten?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Dadurch werden alle Live-Updates von %1$s gestoppt. Neue Benachrichtigungen werden im regulären Format angezeigt. Live-Updates jetzt stoppen?</string>
     <string name="miui_notification_menu_setting_success">Fertig</string>
     <string name="miui_notification_menu_snooze">Schlummern</string>
     <string name="miui_notification_menu_title_custom_fold">Benutzerdefinierte Benachrichtigungen gruppieren</string>
@@ -1427,6 +1428,7 @@ d.M."</string>
     <string name="miui_notification_menu_title_no_drawable">Nur auf dem inneren Bildschirm fortfahren</string>
     <string name="miui_notification_menu_title_not_allow">Ausschalten</string>
     <string name="miui_notification_menu_unfocus">Spotlight für Benachrichtigungen ausschalten</string>
+    <string name="miui_notification_menu_unliveupdate">Live-Updates stoppen</string>
     <string name="miui_oversize_a_date">"d
 .
 M"</string>
