--- a/mtk-sdk36/Hebrew/main/MiuiSystemUI.apk/res/values-iw-rIL/strings.xml
+++ b/mtk-sdk36/Hebrew/main/MiuiSystemUI.apk/res/values-iw-rIL/strings.xml
@@ -474,6 +474,7 @@ M/d"</string>
     <string name="miui_notification_menu_msg_custom_unfold">להציג התראות בהתאמה אישית מ-\"%1$s\" בלוח ההתראות?</string>
     <string name="miui_notification_menu_msg_not_allow">להשבית את כל ההתראות מ-%1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">אתם עומדים להשבית את הזרקור על התראות עבור %1$s. ההתראות האלה יוצגו כרגיל. להשבית עכשיו?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">זה יגרום להפסקת כל העדכונים בזמן אמת מ-%1$s. התראות חדשות יוצגו בפורמט הרגיל. להפסיק עדכונים בזמן אמת עכשיו?</string>
     <string name="miui_notification_menu_setting_success">בוצע</string>
     <string name="miui_notification_menu_snooze">נודניק</string>
     <string name="miui_notification_menu_title_custom_fold">לקבץ התראות בהתאמה אישית</string>
@@ -481,6 +482,7 @@ M/d"</string>
     <string name="miui_notification_menu_title_no_drawable">להמשיך במסך הפנימי</string>
     <string name="miui_notification_menu_title_not_allow">להשבית</string>
     <string name="miui_notification_menu_unfocus">השבתת הזרקור על התראות</string>
+    <string name="miui_notification_menu_unliveupdate">להפסיק עדכונים בזמן אמת</string>
     <string name="miui_oversize_a_date">"d
 /
 M"</string>
