--- a/mtk-sdk36/Hungarian/main/MiuiSystemUI.apk/res/values-hu/strings.xml
+++ b/mtk-sdk36/Hungarian/main/MiuiSystemUI.apk/res/values-hu/strings.xml
@@ -1419,6 +1419,7 @@ M. d."</string>
     <string name="miui_notification_menu_msg_custom_unfold">\"%1$s\" egyéni értesítéseit mutassa az \"Értesítési felületen\"?</string>
     <string name="miui_notification_menu_msg_not_allow">Kikapcsolja a(z) %1$s összes értesítését?</string>
     <string name="miui_notification_menu_msg_unfocus">Arra készül, hogy kikapcsolja az Értesítések kiemelését a(z) %1$s alkalmazáshoz. Ezek az értesítések a megszokott módon jelennek meg. Kikapcsolja most?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Ez leállítja az összes élő frissítést innen: %1$s. Az új értesítések a szokásos formátumban jelennek meg. Most leállítja az élő frissítéseket?</string>
     <string name="miui_notification_menu_setting_success">Kész</string>
     <string name="miui_notification_menu_snooze">Szundi</string>
     <string name="miui_notification_menu_title_custom_fold">Egyéni értesítések csoportosítása</string>
@@ -1426,6 +1427,7 @@ M. d."</string>
     <string name="miui_notification_menu_title_no_drawable">Folytatás a belső képernyőn</string>
     <string name="miui_notification_menu_title_not_allow">Kikapcsolom</string>
     <string name="miui_notification_menu_unfocus">Értesítések kiemelésének kikapcsolása</string>
+    <string name="miui_notification_menu_unliveupdate">Élő frissítések leállítása</string>
     <string name="miui_oversize_a_date">"MM
 .
 dd"</string>
