--- a/mtk-sdk36/Italian/main/MiuiSystemUI.apk/res/values-it/strings.xml
+++ b/mtk-sdk36/Italian/main/MiuiSystemUI.apk/res/values-it/strings.xml
@@ -1419,6 +1419,7 @@ d/M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">"Mostrare le notifiche personalizzate da \"%1$s\" nell'Area delle notifiche?"</string>
     <string name="miui_notification_menu_msg_not_allow">Disattivare tutte le notifiche da parte di %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Stai per disattivare le Notifiche in evidenza per %1$s. Queste notifiche verranno visualizzate normalmente. Spegnere adesso?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Questa operazione interromperà tutti gli aggiornamenti in tempo reale di %1$s. Le nuove notifiche verranno mostrate nel formato normale. Interrompere subito gli aggiornamenti in tempo reale?</string>
     <string name="miui_notification_menu_setting_success">Fatto</string>
     <string name="miui_notification_menu_snooze">Sospendi</string>
     <string name="miui_notification_menu_title_custom_fold">Raggruppa notifiche personalizzate</string>
@@ -1426,6 +1427,7 @@ d/M"</string>
     <string name="miui_notification_menu_title_no_drawable">Continua nella schermata interna</string>
     <string name="miui_notification_menu_title_not_allow">Disattiva</string>
     <string name="miui_notification_menu_unfocus">Disattiva le Notifiche in evidenza</string>
+    <string name="miui_notification_menu_unliveupdate">Interrompi gli aggiornamenti in tempo reale</string>
     <string name="miui_oversize_a_date">"dd
 /
 MM"</string>
