--- a/mtk-sdk36/Japanese/main/MiuiSystemUI.apk/res/values-ja/strings.xml
+++ b/mtk-sdk36/Japanese/main/MiuiSystemUI.apk/res/values-ja/strings.xml
@@ -1413,6 +1413,7 @@ EEE"</string>
     <string name="miui_notification_menu_msg_custom_unfold">「%1$s」からのカスタム通知を通知シェードを表示しますか？</string>
     <string name="miui_notification_menu_msg_not_allow">%1$sからのすべての通知をオフにしますか？</string>
     <string name="miui_notification_menu_msg_unfocus">%1$s の通知スポットライトをオフにしようとしています。これらの通知は通常通り表示されます。今すぐオフにしますか？</string>
+    <string name="miui_notification_menu_msg_unliveupdate">これで%1$sからのライブアップデートがすべて停止されます。新しい通知は通常の形式で表示されます。今すぐライブアップデートを停止しますか？</string>
     <string name="miui_notification_menu_setting_success">完了</string>
     <string name="miui_notification_menu_snooze">スヌーズ</string>
     <string name="miui_notification_menu_title_custom_fold">カスタム通知をグループ化</string>
@@ -1420,6 +1421,7 @@ EEE"</string>
     <string name="miui_notification_menu_title_no_drawable">内側の画面で続ける</string>
     <string name="miui_notification_menu_title_not_allow">オフにする</string>
     <string name="miui_notification_menu_unfocus">通知スポットライトをオフにする</string>
+    <string name="miui_notification_menu_unliveupdate">ライブアップデートを停止</string>
     <string name="miui_oversize_a_date">"M
 /
 d"</string>
