--- a/mtk-sdk36/Lithuanian/main/MiuiSystemUI.apk/res/values-lt/strings.xml
+++ b/mtk-sdk36/Lithuanian/main/MiuiSystemUI.apk/res/values-lt/strings.xml
@@ -1419,6 +1419,7 @@ M-d"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Rodyti tinkintus pranešimus iš „%1$s“, kuris yra pranešimų juostoje?</string>
     <string name="miui_notification_menu_msg_not_allow">Išjungti visus pranešimus iš %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Ketinate išjungti pranešimų išskyrimą elementui %1$s. Šie pranešimai bus rodomi įprastai. Išjungti dabar?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Tai sustabdys visus tiesioginius atnaujinimus iš %1$s. Nauji pranešimai bus rodomi įprastu formatu. Sustabdyti tiesioginius atnaujinimus dabar?</string>
     <string name="miui_notification_menu_setting_success">Baigta</string>
     <string name="miui_notification_menu_snooze">Snūstelėti</string>
     <string name="miui_notification_menu_title_custom_fold">Grupuoti tinkintus pranešimus</string>
@@ -1426,6 +1427,7 @@ M-d"</string>
     <string name="miui_notification_menu_title_no_drawable">Tęsti vidiniame lange</string>
     <string name="miui_notification_menu_title_not_allow">Išjungti</string>
     <string name="miui_notification_menu_unfocus">Išjungti pranešimų išskyrimą</string>
+    <string name="miui_notification_menu_unliveupdate">Stabdyti tiesioginius atnaujinimus</string>
     <string name="miui_oversize_a_date">"M
 /
 d"</string>
