--- a/mtk-sdk36/Norwegian/main/MiuiSystemUI.apk/res/values-nb/strings.xml
+++ b/mtk-sdk36/Norwegian/main/MiuiSystemUI.apk/res/values-nb/strings.xml
@@ -1419,6 +1419,7 @@ d.M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Vise tilpassede varsler fra \"%1$s\" i varslingsskyggen?</string>
     <string name="miui_notification_menu_msg_not_allow">Deaktivere alle varsler fra %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Du er i ferd med å deaktivere fremheving av varslinger for %1$s. Disse varslingene vil bli vist normalt. Deaktivere nå?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Dette stopper alle live-oppdateringer fra %1$s. Nye varsler vil bli vist i vanlig format. Vil du stoppe live-oppdateringer nå?</string>
     <string name="miui_notification_menu_setting_success">Ferdig</string>
     <string name="miui_notification_menu_snooze">Utsett</string>
     <string name="miui_notification_menu_title_custom_fold">Varsler tilpassede varsler</string>
@@ -1426,6 +1427,7 @@ d.M"</string>
     <string name="miui_notification_menu_title_no_drawable">Fortsett på den innvendige skjermen</string>
     <string name="miui_notification_menu_title_not_allow">Deaktiver</string>
     <string name="miui_notification_menu_unfocus">Deaktiver fremhevede varslinger</string>
+    <string name="miui_notification_menu_unliveupdate">Stopp direktesendte oppdateringer</string>
     <string name="miui_oversize_a_date">"dd
 .
 MM"</string>
