--- a/mtk-sdk36/Persian/main/MiuiSystemUI.apk/res/values-fa-rIR/strings.xml
+++ b/mtk-sdk36/Persian/main/MiuiSystemUI.apk/res/values-fa-rIR/strings.xml
@@ -376,6 +376,7 @@ d/M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">اعلان‌های سفارشی از «%1$s» در کرکره اعلان نمایش داده شوند؟</string>
     <string name="miui_notification_menu_msg_not_allow">همه اعلان‌ها از %1$s خاموش شوند؟</string>
     <string name="miui_notification_menu_msg_unfocus">شما در آستانه خاموش کردن نور افکن اعلان برای %1$s هستید. این اعلان‌ها به صورت عادی نمایش داده خواهند شد. خاموش شود؟</string>
+    <string name="miui_notification_menu_msg_unliveupdate">این کار تمام به‌روزرسانی‌های زنده از %1$s را متوقف می‌کند. اعلان‌های جدید در قالب معمولی نمایش داده می‌شوند. به‌روزرسانی‌های زنده متوقف شوند؟</string>
     <string name="miui_notification_menu_setting_success">انجام شده</string>
     <string name="miui_notification_menu_snooze">چرت زدن</string>
     <string name="miui_notification_menu_title_custom_fold">گروه‌بندی اعلان‌های سفارشی</string>
@@ -383,6 +384,7 @@ d/M"</string>
     <string name="miui_notification_menu_title_no_drawable">در نمایشگر درونی ادامه دهید</string>
     <string name="miui_notification_menu_title_not_allow">خاموش کردن</string>
     <string name="miui_notification_menu_unfocus">خاموش کردن نور افکن اعلان</string>
+    <string name="miui_notification_menu_unliveupdate">توقف به‌روزرسانی‌های زنده</string>
     <string name="miui_oversize_a_date">"d
 /
 M"</string>
