--- a/mtk-sdk36/Polish/main/MiuiSystemUI.apk/res/values-pl/strings.xml
+++ b/mtk-sdk36/Polish/main/MiuiSystemUI.apk/res/values-pl/strings.xml
@@ -1419,6 +1419,7 @@ d.M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Wyświetlać powiadomienia niestandardowe od „%1$s” w panelu powiadomień?</string>
     <string name="miui_notification_menu_msg_not_allow">Wyłączyć powiadomienia od %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Za chwilę wyłączysz Oświetlenie powiadomień dla %1$s. Te powiadomienia będą wyświetlane normalnie. Wyłączyć?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Spowoduje to zatrzymanie wszystkich aktualizacji na żywo z aplikacji %1$s. Nowe powiadomienia będą wyświetlane w standardowym formacie. Zatrzymać aktualizacje na żywo?</string>
     <string name="miui_notification_menu_setting_success">Zakończono</string>
     <string name="miui_notification_menu_snooze">Drzemka</string>
     <string name="miui_notification_menu_title_custom_fold">Grupuj powiadomienia niestandardowe</string>
@@ -1426,6 +1427,7 @@ d.M"</string>
     <string name="miui_notification_menu_title_no_drawable">Kontynuuj na ekranie wewnętrznym</string>
     <string name="miui_notification_menu_title_not_allow">Wyłącz</string>
     <string name="miui_notification_menu_unfocus">Wyłącz Oświetlenie powiadomień</string>
+    <string name="miui_notification_menu_unliveupdate">Zatrzymaj aktualizacje na żywo</string>
     <string name="miui_oversize_a_date">"d
 .
 MM"</string>
