--- a/mtk-sdk36/Portuguese-Brazil/main/MiuiSystemUI.apk/res/values-pt-rBR/strings.xml
+++ b/mtk-sdk36/Portuguese-Brazil/main/MiuiSystemUI.apk/res/values-pt-rBR/strings.xml
@@ -1418,6 +1418,7 @@ d/M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Mostrar notificações personalizadas de “%1$s” na Área de notificações?</string>
     <string name="miui_notification_menu_msg_not_allow">Desativar todas as notificações de %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Você está prestes a desativar o Destaque de notificações para o %1$s. Estas notificações serão exibidas normalmente. Desativar agora?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Isto parará todas as atualizações ao vivo de %1$s. Novas notificações serão exibidas no formato padrão. Parar as atualizações ao vivo agora?</string>
     <string name="miui_notification_menu_setting_success">Concluído</string>
     <string name="miui_notification_menu_snooze">Adiar</string>
     <string name="miui_notification_menu_title_custom_fold">Agrupar notificações personalizadas</string>
@@ -1425,6 +1426,7 @@ d/M"</string>
     <string name="miui_notification_menu_title_no_drawable">Continue na tela interna</string>
     <string name="miui_notification_menu_title_not_allow">Desativar</string>
     <string name="miui_notification_menu_unfocus">Desativar Destaque de notificações</string>
+    <string name="miui_notification_menu_unliveupdate">Parar atualizações ao vivo</string>
     <string name="miui_oversize_a_date">"d
 /
 M"</string>
