--- a/mtk-sdk36/Portuguese-Portugal/main/MiuiSystemUI.apk/res/values-pt-rPT/strings.xml
+++ b/mtk-sdk36/Portuguese-Portugal/main/MiuiSystemUI.apk/res/values-pt-rPT/strings.xml
@@ -1419,6 +1419,7 @@ d/M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Mostrar notificações personalizadas de “%1$s” na Área de notificações?</string>
     <string name="miui_notification_menu_msg_not_allow">Desativar todas as notificações da %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Está prestes a desligar o Destaque de notificações para %1$s. Estas notificações serão exibidas normalmente. Desligar agora?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Isto parará todas as atualizações em direto de %1$s. Novas notificações serão exibidas no formato regular. Parar todas as atualizações em direto agora?</string>
     <string name="miui_notification_menu_setting_success">Concluído</string>
     <string name="miui_notification_menu_snooze">Adiar</string>
     <string name="miui_notification_menu_title_custom_fold">Agrupar notificações personalizadas</string>
@@ -1426,6 +1427,7 @@ d/M"</string>
     <string name="miui_notification_menu_title_no_drawable">Continue no ecrã interno</string>
     <string name="miui_notification_menu_title_not_allow">Desativar</string>
     <string name="miui_notification_menu_unfocus">Desligar o Destaque de notificações</string>
+    <string name="miui_notification_menu_unliveupdate">Parar atualizações em direto</string>
     <string name="miui_oversize_a_date">"d
 /
 M"</string>
