--- a/mtk-sdk36/Romanian/main/MiuiSystemUI.apk/res/values-ro/strings.xml
+++ b/mtk-sdk36/Romanian/main/MiuiSystemUI.apk/res/values-ro/strings.xml
@@ -1419,6 +1419,7 @@ d.M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Afișează notificări personalizate de la \"%1$s\" în Panoul de notificări?</string>
     <string name="miui_notification_menu_msg_not_allow">Dezactivați toate notificările de la %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Ești pe cale să dezactivezi Notificări în evidență pentru %1$s. Aceste notificări vor fi afișate în mod normal. Dezactivați acum?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Aceasta va opri toate actualizările live de la %1$s. Notificările noi vor fi afișate în formatul obișnuit. Opriți actualizările live acum?</string>
     <string name="miui_notification_menu_setting_success">Efectuat</string>
     <string name="miui_notification_menu_snooze">Amână</string>
     <string name="miui_notification_menu_title_custom_fold">Grupează notificările personalizate</string>
@@ -1426,6 +1427,7 @@ d.M"</string>
     <string name="miui_notification_menu_title_no_drawable">Continuați pe ecranul interior</string>
     <string name="miui_notification_menu_title_not_allow">Dezactivează</string>
     <string name="miui_notification_menu_unfocus">Dezactivează Notificări în evidență</string>
+    <string name="miui_notification_menu_unliveupdate">Oprește actualizările live</string>
     <string name="miui_oversize_a_date">"dd
 .
 MM"</string>
