--- a/mtk-sdk36/Serbian/main/MiuiSystemUI.apk/res/values-sr/strings.xml
+++ b/mtk-sdk36/Serbian/main/MiuiSystemUI.apk/res/values-sr/strings.xml
@@ -1419,6 +1419,7 @@ d. M."</string>
     <string name="miui_notification_menu_msg_custom_unfold">Приказати прилагођена обавештења од \"%1$s\" у Панелу обавештења?</string>
     <string name="miui_notification_menu_msg_not_allow">Искључити сва обавештења за %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Истицање обавештења ће бити искључено за %1$s. Ова обавештења ће се нормално приказивати. Искључити сада?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Овим ће се зауставити сва ажурирања уживо од %1$s. Нова обавештења ће се приказивати у уобичајеном формату. Зауставити ажурирања уживо сада?</string>
     <string name="miui_notification_menu_setting_success">Готово</string>
     <string name="miui_notification_menu_snooze">Одложи</string>
     <string name="miui_notification_menu_title_custom_fold">Групиши прилагођена обавештења</string>
@@ -1426,6 +1427,7 @@ d. M."</string>
     <string name="miui_notification_menu_title_no_drawable">Наставите на унутрашњем екрану</string>
     <string name="miui_notification_menu_title_not_allow">Искључи</string>
     <string name="miui_notification_menu_unfocus">Искључи Истицање обавештења</string>
+    <string name="miui_notification_menu_unliveupdate">Заустави ажурирања уживо</string>
     <string name="miui_oversize_a_date">"d
 .
 M"</string>
