--- a/mtk-sdk36/Slovak/main/MiuiSystemUI.apk/res/values-sk/strings.xml
+++ b/mtk-sdk36/Slovak/main/MiuiSystemUI.apk/res/values-sk/strings.xml
@@ -1419,6 +1419,7 @@ d. M."</string>
     <string name="miui_notification_menu_msg_custom_unfold">Zobraziť vlastné upozornenia z \"%1$s\" v Notifikačnej roletke?</string>
     <string name="miui_notification_menu_msg_not_allow">Vypnúť všetky upozornenia z aplikácie %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Chystáte sa vypnúť zvýraznenie upozornenia pre %1$s. Tieto upozornenia sa zobrazia normálne. Vypnúť teraz?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Toto zastaví všetky živé aktualizácie z aplikácie %1$s. Nové upozornenia sa budú zobrazovať v bežnom formáte. Zastaviť živé aktualizácie teraz?</string>
     <string name="miui_notification_menu_setting_success">Hotovo</string>
     <string name="miui_notification_menu_snooze">Odložiť</string>
     <string name="miui_notification_menu_title_custom_fold">Zoskupiť vlastné upozornenia</string>
@@ -1426,6 +1427,7 @@ d. M."</string>
     <string name="miui_notification_menu_title_no_drawable">Pokračujte na vnútornej obrazovke</string>
     <string name="miui_notification_menu_title_not_allow">Vypnúť</string>
     <string name="miui_notification_menu_unfocus">Vypnúť zvýraznenie upozornenia</string>
+    <string name="miui_notification_menu_unliveupdate">Zastaviť živé aktualizácie</string>
     <string name="miui_oversize_a_date">"d
 /
 M"</string>
