--- a/mtk-sdk36/Slovenian/main/MiuiSystemUI.apk/res/values-sl/strings.xml
+++ b/mtk-sdk36/Slovenian/main/MiuiSystemUI.apk/res/values-sl/strings.xml
@@ -1419,6 +1419,7 @@ d. M."</string>
     <string name="miui_notification_menu_msg_custom_unfold">Želite prikazati prilagojena obvestila iz »%1$s« v plošči obvestil?</string>
     <string name="miui_notification_menu_msg_not_allow">Izklopim vsa obvestila za %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Izklopili boste Osrednje obvestilo za %1$s. Ta obvestila bodo prikazana normalno. Želite nadaljevati?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">S tem boste ustavili vse posodobitve v živo iz %1$s. Nova obvestila bodo prikazana v običajni obliki. Želite ustaviti posodobitve v živo?</string>
     <string name="miui_notification_menu_setting_success">Konec</string>
     <string name="miui_notification_menu_snooze">Odloži</string>
     <string name="miui_notification_menu_title_custom_fold">Združi prilagojena obvestila</string>
@@ -1426,6 +1427,7 @@ d. M."</string>
     <string name="miui_notification_menu_title_no_drawable">Nadaljuj na notranjem zaslonu</string>
     <string name="miui_notification_menu_title_not_allow">Izklopi</string>
     <string name="miui_notification_menu_unfocus">Izklopite Osrednje obvestilo</string>
+    <string name="miui_notification_menu_unliveupdate">Ustavi posodobitve v živo</string>
     <string name="miui_oversize_a_date">"d
 .
 M"</string>
