--- a/mtk-sdk36/Spanish/main/MiuiSystemUI.apk/res/values-es-rUS/strings.xml
+++ b/mtk-sdk36/Spanish/main/MiuiSystemUI.apk/res/values-es-rUS/strings.xml
@@ -1419,6 +1419,7 @@ d/M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">¿Mostrar notificaciones personalizadas de \"%1$s\" en la Barra de notificaciones?</string>
     <string name="miui_notification_menu_msg_not_allow">¿Desactivar todas las notificaciones de %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Está a punto de desactivar el Destacado de notificaciones para %1$s. Estas notificaciones se mostrarán con normalidad. ¿Desactivar ahora?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Esto detendrá todas las actualizaciones en vivo de %1$s. Las nuevas notificaciones se mostrarán en el formato habitual. ¿Detener las actualizaciones en vivo?</string>
     <string name="miui_notification_menu_setting_success">Hecho</string>
     <string name="miui_notification_menu_snooze">Posponer</string>
     <string name="miui_notification_menu_title_custom_fold">Agrupar notificaciones personalizadas</string>
@@ -1426,6 +1427,7 @@ d/M"</string>
     <string name="miui_notification_menu_title_no_drawable">Continuar en la pantalla interior</string>
     <string name="miui_notification_menu_title_not_allow">Desactivar</string>
     <string name="miui_notification_menu_unfocus">Desactivar el Destacado de notificaciones</string>
+    <string name="miui_notification_menu_unliveupdate">Detener actualizaciones en vivo</string>
     <string name="miui_oversize_a_date">"d
 /
 M"</string>
