--- a/mtk-sdk36/Swedish/main/MiuiSystemUI.apk/res/values-sv/strings.xml
+++ b/mtk-sdk36/Swedish/main/MiuiSystemUI.apk/res/values-sv/strings.xml
@@ -1419,6 +1419,7 @@ d/M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Visa anpassade notifikationer från \"%1$s\" i Notifikationspanelen?</string>
     <string name="miui_notification_menu_msg_not_allow">Avaktivera alla notifikationer från %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Du håller på att avaktivera Markera notifikation för %1$s. Dessa notifikationer kommer att visas normalt. Avaktivera nu?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Det här kommer att avsluta alla live-uppdateringar från %1$s. Nya notifikationer kommer att visas i vanligt format. Avsluta live-uppdateringar nu?</string>
     <string name="miui_notification_menu_setting_success">Klart</string>
     <string name="miui_notification_menu_snooze">Snooze</string>
     <string name="miui_notification_menu_title_custom_fold">Gruppera anpassade notifikationer</string>
@@ -1426,6 +1427,7 @@ d/M"</string>
     <string name="miui_notification_menu_title_no_drawable">Fortsätt på innerskärmen</string>
     <string name="miui_notification_menu_title_not_allow">Avaktivera</string>
     <string name="miui_notification_menu_unfocus">Avaktivera Markera notifikation</string>
+    <string name="miui_notification_menu_unliveupdate">Avsluta live-uppdateringar</string>
     <string name="miui_oversize_a_date">"d
 /
 M"</string>
