--- a/mtk-sdk36/Thai/main/MiuiSystemUI.apk/res/values-th/strings.xml
+++ b/mtk-sdk36/Thai/main/MiuiSystemUI.apk/res/values-th/strings.xml
@@ -1419,6 +1419,7 @@ d/M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">แสดงการแจ้งเตือนที่กำหนดเองจาก \"%1$s\" ในแถบการแจ้งเตือนหรือไม่?</string>
     <string name="miui_notification_menu_msg_not_allow">ปิดการแจ้งเตือนทั้งหมดจาก %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">คุณกำลังจะปิดสปอตไลท์การแจ้งเตือนสำหรับ %1$s การแจ้งเตือนเหล่านี้จะแสดงตามปกติ ปิดตอนนี้เลย?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">การดำเนินการนี้จะหยุดการอัปเดตแบบเรียลไทม์ทั้งหมดจาก %1$s การแจ้งเตือนใหม่จะแสดงในรูปแบบปกติ ต้องการหยุดการอัปเดตสดตอนนี้หรือไม่?</string>
     <string name="miui_notification_menu_setting_success">เสร็จสิ้น</string>
     <string name="miui_notification_menu_snooze">เลื่อนปลุก</string>
     <string name="miui_notification_menu_title_custom_fold">จัดกลุ่มการแจ้งเตือนแบบกำหนดเอง</string>
@@ -1426,6 +1427,7 @@ d/M"</string>
     <string name="miui_notification_menu_title_no_drawable">ดำเนินการต่อบนหน้าจอด้านใน</string>
     <string name="miui_notification_menu_title_not_allow">ปิดใช้งาน</string>
     <string name="miui_notification_menu_unfocus">ปิดสปอตไลท์การแจ้งเตือน</string>
+    <string name="miui_notification_menu_unliveupdate">หยุดการอัปเดตสด</string>
     <string name="miui_oversize_a_date">"d
 /
 M"</string>
