--- a/mtk-sdk36/Turkish/main/MiuiSystemUI.apk/res/values-tr/strings.xml
+++ b/mtk-sdk36/Turkish/main/MiuiSystemUI.apk/res/values-tr/strings.xml
@@ -1419,6 +1419,7 @@ d/M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">\"%1$s\" uygulamasından gelen özel bildirimler \"Bildirim çubuğu\" menüsünde gösterilsin mi?</string>
     <string name="miui_notification_menu_msg_not_allow">%1$s uygulamasından gelen tüm bildirimler kapatılsın mı?</string>
     <string name="miui_notification_menu_msg_unfocus">%1$s için Bildirim spot ışığını kapatmak üzeresiniz. Bu bildirimler normal bir şekilde görüntülenecek. Şimdi kapatılsın mı?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Bu %1$s uygulamasından gelen tüm canlı güncellemeleri durduracak. Yeni bildirimler normal formatta görüntülenecek. Canlı bildirimler şimdi durdurulsun mu?</string>
     <string name="miui_notification_menu_setting_success">Bitti</string>
     <string name="miui_notification_menu_snooze">Ertele</string>
     <string name="miui_notification_menu_title_custom_fold">Özel bildirimleri gruplandır</string>
@@ -1426,6 +1427,7 @@ d/M"</string>
     <string name="miui_notification_menu_title_no_drawable">İç ekranda devam edin</string>
     <string name="miui_notification_menu_title_not_allow">Kapat</string>
     <string name="miui_notification_menu_unfocus">Bildirim spot ışığını kapat</string>
+    <string name="miui_notification_menu_unliveupdate">Canlı güncellemeleri durdur</string>
     <string name="miui_oversize_a_date">"d
 /
 M"</string>
