--- a/mtk-sdk36/Ukrainian/main/MiuiSystemUI.apk/res/values-uk/strings.xml
+++ b/mtk-sdk36/Ukrainian/main/MiuiSystemUI.apk/res/values-uk/strings.xml
@@ -1419,6 +1419,7 @@ d.M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Показувати персональні сповіщення від \"%1$s\" у Панелі сповіщень?</string>
     <string name="miui_notification_menu_msg_not_allow">Вимкнути всі сповіщення від %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Ви збираєтеся вимкнути підствічення сповіщень на %1$s. Наступні сповіщення будуть відображатися у звичайному форматі. Вимкнути?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Це зупинить всі оновлення в реальному часі від %1$s. Нові сповіщення будуть відображатися у звичайному форматі. Зупинити оновлення в реальному часі?</string>
     <string name="miui_notification_menu_setting_success">Готово</string>
     <string name="miui_notification_menu_snooze">Відкласти</string>
     <string name="miui_notification_menu_title_custom_fold">Групувати персональні сповіщення</string>
@@ -1426,6 +1427,7 @@ d.M"</string>
     <string name="miui_notification_menu_title_no_drawable">Продовжуйте роботу на внутрішньому екрані</string>
     <string name="miui_notification_menu_title_not_allow">Вимкнути</string>
     <string name="miui_notification_menu_unfocus">Вимкнути пісвічення сповіщень</string>
+    <string name="miui_notification_menu_unliveupdate">Зупинити оновлення в реальному часі</string>
     <string name="miui_oversize_a_date">"dd
 .
 MM"</string>
