--- a/mtk-sdk36/Vietnamese/main/MiuiSystemUI.apk/res/values-vi/strings.xml
+++ b/mtk-sdk36/Vietnamese/main/MiuiSystemUI.apk/res/values-vi/strings.xml
@@ -1419,6 +1419,7 @@ d/M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Nhóm thông báo tùy chỉnh từ \"%1$s\" trong Thanh thông báo?</string>
     <string name="miui_notification_menu_msg_not_allow">Tắt tất cả thông báo từ %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Bạn sắp tắt Tiêu điểm thông báo cho %1$s. Các thông báo này sẽ được hiển thị bình thường. Tắt ngay?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Điều này sẽ dừng tất cả cập nhật trực tiếp từ %1$s. Thông báo mới sẽ được hiển thị theo định dạng thông thường. Dừng cập nhật trực tiếp ngay?</string>
     <string name="miui_notification_menu_setting_success">Hoàn tất</string>
     <string name="miui_notification_menu_snooze">Báo lại</string>
     <string name="miui_notification_menu_title_custom_fold">Nhóm thông báo tùy chỉnh</string>
@@ -1426,6 +1427,7 @@ d/M"</string>
     <string name="miui_notification_menu_title_no_drawable">Tiếp tục trên màn hình bên trong</string>
     <string name="miui_notification_menu_title_not_allow">Tắt</string>
     <string name="miui_notification_menu_unfocus">Tắt Tiêu điểm thông báo</string>
+    <string name="miui_notification_menu_unliveupdate">Dừng cập nhật trực tiếp</string>
     <string name="miui_oversize_a_date">"d
 /
 M"</string>
