--- a/mtk-sdk36/Korean/main/MiuiSystemUI.apk/res/values-ko/strings.xml
+++ b/mtk-sdk36/Korean/main/MiuiSystemUI.apk/res/values-ko/strings.xml
@@ -1419,6 +1419,7 @@ EEE"</string>
     <string name="miui_notification_menu_msg_custom_unfold">알림 바에 \"%1$s\"의 사용자지정 알림을 표시하시겠습니까?</string>
     <string name="miui_notification_menu_msg_not_allow">%1$s의 모든 알림을 끄시겠습니까?</string>
     <string name="miui_notification_menu_msg_unfocus">%1$s의 알림 스포트라이트를 끄려고 합니다. 이 알림은 정상적으로 표시됩니다. 지금 끄시겠습니까?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">이는 %1$s의 라이브 업데이트를 중지합니다. 새로운 알림이 일반적인 형식으로 표시됩니다. 라이브 업데이트를 중지하시겠습니까?</string>
     <string name="miui_notification_menu_setting_success">완료</string>
     <string name="miui_notification_menu_snooze">다시 알림</string>
     <string name="miui_notification_menu_title_custom_fold">사용자지정 알림 그룹화</string>
@@ -1426,6 +1427,7 @@ EEE"</string>
     <string name="miui_notification_menu_title_no_drawable">내부 화면에서 계속하기</string>
     <string name="miui_notification_menu_title_not_allow">끄기</string>
     <string name="miui_notification_menu_unfocus">알림 스포트라이트 끄기</string>
+    <string name="miui_notification_menu_unliveupdate">라이브 업데이트 중지</string>
     <string name="miui_oversize_a_date">"M
 /
 d"</string>
