--- a/mtk-sdk36/Russian/main/MiuiSystemUI.apk/res/values-ru/strings.xml
+++ b/mtk-sdk36/Russian/main/MiuiSystemUI.apk/res/values-ru/strings.xml
@@ -1419,6 +1419,7 @@ d.M"</string>
     <string name="miui_notification_menu_msg_custom_unfold">Показывать персонализированные уведомления от «%1$s» в Шторке уведомлений?</string>
     <string name="miui_notification_menu_msg_not_allow">Выключить все уведомления от %1$s?</string>
     <string name="miui_notification_menu_msg_unfocus">Вы собираетесь отключить подсветку уведомлений для %1$s. Эти уведомления будут отображены в обычном режиме. Отключить?</string>
+    <string name="miui_notification_menu_msg_unliveupdate">Это остановит все обновления в реальном времени от %1$s. Новые уведомления будут отображаться в обычном формате. Остановить обновления в реальном времени?</string>
     <string name="miui_notification_menu_setting_success">Готово</string>
     <string name="miui_notification_menu_snooze">Отложить</string>
     <string name="miui_notification_menu_title_custom_fold">Группировать персонализированные уведомления</string>
@@ -1426,6 +1427,7 @@ d.M"</string>
     <string name="miui_notification_menu_title_no_drawable">Продолжайте работу на внутреннем экране</string>
     <string name="miui_notification_menu_title_not_allow">Выключить</string>
     <string name="miui_notification_menu_unfocus">Отключить подсветку уведомлений</string>
+    <string name="miui_notification_menu_unliveupdate">Остановить обновления в реальном времени</string>
     <string name="miui_oversize_a_date">"dd
 .
 MM"</string>
